# equiv

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
equiv/: data.py  main.py  ml.py  odr.py  sample_size.py  utils.py
tests/: test_data.py  test_ml.py  test_utils.py
