[project]
name = "equiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jax>=0.9.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.14",
]
