[project]
name = "equiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.4.0",
    "chex==0.1.90",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.61.1",
    "isort==7.0.0",
    "jax==0.4.38",
    "jaxlib==0.4.38",
    "kiwisolver==1.4.9",
    "loguru==0.7.3",
    "matplotlib==3.10.8",
    "ml-dtypes==0.5.4",
    "numpy==2.4.2",
    "opt-einsum==3.4.0",
    "optax==0.2.5",
    "packaging==26.0",
    "pandas>=3.0.1",
    "pillow==12.1.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "ruff==0.14.14",
    "scipy==1.17.0",
    "setuptools==82.0.0",
    "six==1.17.0",
    "toolz==1.1.0",
    "typing-extensions==4.15.0",
]

[tool.pytest.ini_options]
pythonpath = ["equiv"]

[tool.coverage.run]
omit = ["equiv/main.py", "equiv/odr.py", "equiv/sample_size.py"]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.14",
]
